--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -15,10 +15,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-	      cd api_yambd
-        pip install -r requirements.txt
+        cd api_yamdb
+        pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
