--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: umika32/yamdb_final:v1.00
+    image: umika32/yamdb_final:latest
     restart: always
 
     volumes:
