--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -26,24 +26,27 @@ jobs:
         pytest
 
   build_and_push_to_docker_hub:
+    if: ${{ github.ref }} == 'master'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to Docker
-        uses: docker/login-action@v1
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v2 
         with:
+          context: api_yamdb
           push: true
           tags: umika32/yamb_final:latest
+          file: api_yamdb/Dockerfile          
 
   deploy:
     runs-on: ubuntu-latest
