--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,11 +1,10 @@
-name: yamdb workflow
+name: Yamdb workflow
 
 on: [push]
 
 jobs:
-  tests:
+  tests: 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -14,19 +13,17 @@ jobs:
         python-version: 3.7
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
+      run: | 
+        python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r requirements.txt
+        pip install -r api_yamdb/requirements.txt
 
     - name: Test with flake8 and django tests
       run: |
-        python -m flake8
-        cd api_yambd
+        python -m flake8 
         pytest
 
   build_and_push_to_docker_hub:
-    if: ${{ github.ref }} == 'master'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
@@ -43,14 +40,14 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          context: api_yamdb
           push: true
-          tags: umika32/yamb_final:latest
-          file: api_yamdb/Dockerfile          
-
+          tags: umika32/yamdb_final:latest
+          file: api_yamdb/Dockerfile
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
