--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -14,6 +14,10 @@ server {
         root /var/html/;
     }
 
+    location /data/ {
+        root /var/lib/postgresql/data/;
+    }
+
     location / {
         proxy_pass http://web:8000;
     }
