--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
+          context: api_yamdb
           push: true
           tags: umika32/yamdb_final:latest
           file: api_yamdb/Dockerfile
@@ -57,6 +58,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            sudo docker pull umika32/yamdb_final
             sudo docker-compose stop
             sudo docker-compose rm web
             touch .env
